[package]
name = "rust-reproduce-hal-strlen-issue"
version = "0.1.0"
authors = ["Ben Hansen <git@benhansen.io>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["native"] }


[build-dependencies]
embuild = "0.29"
anyhow = "1"
